# semi-autonomous-FPV

./: CorkBoard.txt  README.md
GPIOInput/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  gpio_irq  gpio_irq.c
Multi-thread/: A.csv  B.csv  CMakeCache.txt  CMakeLists.txt  K.csv  Makefile  R.csv  maestro-app  pythLqr.py  run  tty
Multi-thread-old/: CMakeLists.txt  Makefile  main.cpp  server.cpp  server.h  testThread.cpp  tty
Multi-thread/CSV/: A.csv  K.csv  Q.csv  R.csv
Multi-thread/include/: PWM.h  autopilot_interface.h  kalman.h  lqr.h  mavlink_control.h  msp.h  multiwii.h
Multi-thread/source/: PWM.cpp  autopilot_interface.cpp  kalman.cpp  lqr.cpp  maestro.cpp  main.cpp  main_backup.cpp  mavlink_control.cpp  msp.cpp  multiwii.cpp  pythLqr.py  server.cpp  testThread.cpp
Multi-thread_backup_27-09/: CMakeLists.txt  cmake_install.cmake
Multi-thread_backup_27-09/include/: serial.h  testThread.h
Multi-thread_backup_27-09/source/: serial.cpp
Multi-thread_backup_30-09/: -lusb-1.0  CMakeLists.txt  Makefile  run  server.h
Multi-thread_backup_30-09/include/: PWM.h  mspdata.h  server.h
Multi-thread_backup_30-09/source/: autopilot_interface.cpp  maestro.cpp  main.cpp  mavlink_control.cpp  mspdata.cpp  multiwii.cpp
PWM/libmaestro-master/: CMakeCache.txt  Makefile  cmake_install.cmake  maestro-app
ServerTesting/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  server.c  server.cpp  startServer
clientTesting/: CMakeCache.txt  CMakeLists.txt  Makefile  clientTest.cpp  cmake_install.cmake  startClient
control/: armadillo-7.400.2.tar.xz
control/armadillo-7.400.2/: ArmadilloConfig.cmake  CMakeCache.txt  Makefile  cmake_install.cmake  install_manifest.txt  libarmadillo.so.7  libarmadillo.so.7.400.2
control/backup octave/: new file
control/kalman/: Makefile  main.cpp  mainTest  octaveTest2  octaveTest2.cpp  octavetest  octavetest.cpp  runLqr.m  tty
multiwii-client-master/: Makefile  README.md  main.cpp  mainold.cpp  msp.cpp  msp.h  mspdata.cpp  mspdata.h  serial.cpp  serial.h
opencvTesting/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  cv_capture_example  cv_capture_example.cpp
(+29 files in other folders)
